# rustonance

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: docker-image.yml
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  deployment.yaml
src/: client.rs  error.rs  lib.rs  main.rs  model.rs  utils.rs
src/commands/: debug.rs  ew.rs  help.rs  join.rs  leave.rs  list.rs  mod.rs  music.rs  pause.rs  play.rs  repeat.rs  resume.rs  skip.rs  stop.rs
src/handlers/: idle.rs  mod.rs  serenity.rs
src/messaging/: message.rs
src/sources/: spotify.rs  youtube.rs
