[package]
name = "rustonance"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
lazy_static = "1.5.0"
poise = "0.6.1"
regex = "1.10.6"
reqwest = { version= "0.11", features = ["stream"] }
rspotify = "0.13.2"
serenity = { version = "0.12.2", features = ["client", "standard_framework", "voice"] }
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dependencies.songbird]
version = "0.4.3"
features = ["builtin-queue", "receive", "driver"]

# To get additional codecs, you *must* add Symphonia yourself.
# This includes the default formats (MKV/WebM, Ogg, Wave) and codecs (FLAC, PCM, Vorbis)...
[dependencies.symphonia]
version = "0.5.2"
features = ["aac", "mp3", "isomp4", "alac"]
